feat(dashboard): Add transaction and leaderboard live data to dashboard
Handle live data stream from websocket in transaction store. Add sekeleton loader for load handling. Show transaction and leaderboard data on dashboard. Add tests.

--- a/public/i18n/dashboard/en.json
+++ b/public/i18n/dashboard/en.json
@@ -1,3 +1,16 @@
 {
-  "title": "Dashboard"
+  "title": "Dashboard",
+  "transactions": "Transactions",
+  "leaderboard": "Leaderboard",
+  "table": {
+    "timeStamp": "Timestamp",
+    "product": "Product",
+    "planet": "Planet",
+    "transactionType": "Transaction type",
+    "price": "Price TODO",
+    "volume": "Volume",
+    "total": "Total",
+    "transactionValue": "Sum transactions",
+    "numberOfTransaction": "Number of transactions"
+  }
 }
