style: Cleanup styles
Replace direct color values with variables, centralize media breakpoints

--- a/public/i18n/dashboard/en.json
+++ b/public/i18n/dashboard/en.json
@@ -7,7 +7,7 @@
     "product": "Product",
     "planet": "Planet",
     "transactionType": "Transaction type",
-    "price": "Price TODO",
+    "price": "Price",
     "volume": "Volume",
     "total": "Total",
     "transactionValue": "Sum transactions",
