feat(localization): Add localization and translation support for planets
Get user's locale from it's planet. Show units and date in localized format. Support ultharian (=spanish) language

--- a/public/i18n/dashboard/en.json
+++ b/public/i18n/dashboard/en.json
@@ -8,7 +8,7 @@
     "planet": "Planet",
     "transactionType": "Transaction type",
     "price": "Price",
-    "volume": "Volume",
+    "volume": "Volume (Zeta Joules)",
     "total": "Total",
     "transactionValue": "Sum transactions",
     "numberOfTransaction": "Number of transactions"
