feat(auth): Add logout when BE returns 401
Move and centralize store cleanups to authentication store, skip retries when status is 401.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -18,7 +18,8 @@
     "unexpectedError": "An unexpected error occurred",
     "unauthorized": "Unauthorized",
     "invalidSession": "Invalid session",
-    "invalidCredentials": "Invalid credentials"
+    "invalidCredentials": "Invalid credentials",
+    "sessionExpired": "Your session has expired. Please log in again."
   },
   "forbidden": {
     "accessDenied": "Access Denied",
